feat(node): jam-node runtime — chain manager, sync protocols, slot clock, CLI